skills and experience

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top m-4 bg-transparent">
     <a class="navbar-brand text-white" href="index.html">
-      <h1 class="text-white">Mayank</h1>
+      <h2 class="text-white">Mayank's Portfolio</h2>
     </a>
     <button
       class="navbar-toggler"
@@ -40,6 +40,12 @@
         </li>
         <li class="nav-item h4">
           <a class="nav-link text-white fs-5" href="projects.html">Projects</a>
+        </li>
+        <li class="nav-item h4">
+          <a class="nav-link text-white fs-5" href="skills.html">Skills</a>
+        </li>
+        <li class="nav-item h4">
+          <a class="nav-link text-white fs-5" href="experience.html">Experience</a>
         </li>
         <li class="nav-item h4">
           <a class="nav-link text-white fs-5" href="contact.html">Contact</a>
