--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       class="navbar navbar-expand-lg navbar-light bg-light fixed-top m-4 bg-transparent"
     >
       <a class="navbar-brand text-white" href="index.html">
-        <h1 class="text-white">Mayank</h1></a
+        <h2 class="text-white">Mayank's Portfolio</h2></a
       >
       <button
         class="navbar-toggler"
@@ -41,9 +41,13 @@
             <a class="nav-link text-white fs-5" href="index.html">Home</a>
           </li>
           <li class="nav-item h4">
-            <a class="nav-link text-white fs-5" href="projects.html"
-              >Projects</a
-            >
+            <a class="nav-link text-white fs-5" href="projects.html">Projects</a>
+          </li>
+          <li class="nav-item h4">
+            <a class="nav-link text-white fs-5" href="skills.html">Skills</a>
+          </li>
+          <li class="nav-item h4">
+            <a class="nav-link text-white fs-5" href="experience.html">Experience</a>
           </li>
           <li class="nav-item h4">
             <a class="nav-link text-white fs-5" href="contact.html">Contact</a>
