--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,9 @@
           <a class="nav-link text-white fs-5" href="experience.html">Experience</a>
         </li>
         <li class="nav-item h4">
+          <a class="nav-link text-white fs-5" href="blogs.html">Blog</a>
+        </li>
+        <li class="nav-item h4">
           <a class="nav-link text-white fs-5" href="contact.html">Contact</a>
         </li>
       </ul>
