--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <a class="nav-link text-white fs-5" href="experience.html">Experience</a>
           </li>
           <li class="nav-item h4">
+            <a class="nav-link text-white fs-5" href="blogs.html">Blog</a>
+          </li>
+          <li class="nav-item h4">
             <a class="nav-link text-white fs-5" href="contact.html">Contact</a>
           </li>
         </ul>
@@ -67,7 +70,7 @@
             <h1 class="text-white">Hi, I'm Mayank</h1>
             <p>
               A passionate developer with a love for creating amazing mobile
-              applications. Let’s build something incredible together!
+              applications. Let's build something incredible together!
             </p>
           </div>
           <div class="col-md-7 mt-4 mt-md-0">
